--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
-    "version":2,
-    "builds":[{"src":"./src/main.jsx","use":"@vercel/node"}],
-    "routes":[{"src":"/(.*)","dest":"/"}]
-}
+    "rewrites": [
+      { "source": "/(.*)", "destination": "/index.html" }
+    ],
+    "buildCommand": "npm run build",
+    "outputDirectory": "dist",
+    "framework": "vite"
+  }
